--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,132 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fill_w_random(m):\n",
+    "    for i in range(m.shape[0]):\n",
+    "        for j in range(m.shape[1]):\n",
+    "            m[i,j] = np.random.randint(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.zeros((4,3), dtype=int)\n",
+    "B = np.zeros((3,3), dtype=int)\n",
+    "C = np.zeros((3,3), dtype=int)\n",
+    "fill_w_random(A)\n",
+    "fill_w_random(B)\n",
+    "fill_w_random(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 8 3]\n",
+      " [1 3 3]\n",
+      " [5 7 5]\n",
+      " [7 1 7]] \n",
+      "\n",
+      "[[4 3 3]\n",
+      " [9 5 6]\n",
+      " [7 4 1]] \n",
+      "\n",
+      "[[7 8 1]\n",
+      " [9 1 2]\n",
+      " [9 3 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A,'\\n')\n",
+    "print(B, '\\n')\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[269, 146, 116],\n",
+       "       [113,  50,  52],\n",
+       "       [261, 132, 116],\n",
+       "       [207, 132,  92]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dot(B+C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[269, 146, 116],\n",
+       "       [113,  50,  52],\n",
+       "       [261, 132, 116],\n",
+       "       [207, 132,  92]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dot(B)+A.dot(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dot(B+C) == A.dot(B)+A.dot(C)"
    ]
   },
   {
@@ -53,11 +178,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here "
+    "# Your code here \n",
+    "\n",
+    "A = np.zeros((4,3), dtype=int)\n",
+    "B = np.zeros((3,3), dtype=int)\n",
+    "C = np.zeros((3,3), dtype=int)\n",
+    "fill_w_random(A)\n",
+    "fill_w_random(B)\n",
+    "fill_w_random(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1899, 1046,  556],\n",
+       "       [1349,  776,  394],\n",
+       "       [1280,  737,  373],\n",
+       "       [2246, 1235,  659]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dot(B.dot(C))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1899, 1046,  556],\n",
+       "       [1349,  776,  394],\n",
+       "       [1280,  737,  373],\n",
+       "       [2246, 1235,  659]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(A.dot(B)).dot(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dot(B.dot(C)) == (A.dot(B)).dot(C)"
    ]
   },
   {
@@ -70,11 +270,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here "
+    "A = np.zeros((3,3), dtype=int)\n",
+    "B = np.zeros((3,3), dtype=int)\n",
+    "fill_w_random(A)\n",
+    "fill_w_random(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 98, 101,  56],\n",
+       "       [168, 178,  90],\n",
+       "       [ 90,  85,  55]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dot(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[108,  90, 116],\n",
+       "       [ 88,  93, 116],\n",
+       "       [115, 103, 130]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B.dot(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False],\n",
+       "       [False, False, False],\n",
+       "       [False, False, False]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(A.dot(B) == B.dot(A))"
    ]
   },
   {
@@ -88,11 +357,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here "
+    "x = np.zeros((3,1), dtype=int)\n",
+    "y = np.zeros((3,1), dtype=int)\n",
+    "fill_w_random(x)\n",
+    "fill_w_random(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3]\n",
+      " [1]\n",
+      " [4]] \n",
+      "\n",
+      "[[9]\n",
+      " [7]\n",
+      " [4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x, '\\n')\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[50]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(x.transpose()).dot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[50]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(y.transpose()).dot(x)"
    ]
   },
   {
@@ -106,12 +442,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here "
+    "A = np.zeros((4,3), dtype=int)\n",
+    "B = np.zeros((3,8), dtype=int)\n",
+    "fill_w_random(A)\n",
+    "fill_w_random(B)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 45,  81,  85,  37],\n",
+       "       [ 69, 100, 125,  85],\n",
+       "       [ 71, 100, 123,  74],\n",
+       "       [ 73,  89, 113,  57],\n",
+       "       [ 63,  29,  71,  51],\n",
+       "       [ 48,  61,  80,  52],\n",
+       "       [ 56,  27,  64,  46],\n",
+       "       [ 67,  78, 111,  84]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dot(B).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 45,  81,  85,  37],\n",
+       "       [ 69, 100, 125,  85],\n",
+       "       [ 71, 100, 123,  74],\n",
+       "       [ 73,  89, 113,  57],\n",
+       "       [ 63,  29,  71,  51],\n",
+       "       [ 48,  61,  80,  52],\n",
+       "       [ 56,  27,  64,  46],\n",
+       "       [ 67,  78, 111,  84]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B.transpose().dot(A.transpose())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(A.dot(B).transpose() == B.transpose().dot(A.transpose()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -125,9 +552,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -139,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
